--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de compras</title>
     <link rel="shortcut icon" href="fish.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../src/styles/index.css">
 </head>
 <body>
     <header>
         <div class="row-align">
-            <div id="context"></div>
-            <div></div>
+            <div id="context">Lista de compras</div>
+            <div>DEVinHouse NDD</div>
         </div>
     </header>
     <main>
@@ -24,12 +25,12 @@
                 <button type="button">Inserir</button>
             </div>
             <div class="row-align">
-                <div id="list-container scroll-y">
-                    <p>Lista de compras</p>
+                <div id="list-container" class="scroll-y">
+                    <h1>Lista de compras</h1>
                 </div>
                 <div>
                     <p>Total das compras:</p>
-                    <p id="purchase-total">R$ 0,00</p>
+                    <h1 id="purchase-total">R$ 0,00</h1>
                 </div>
             </div>
         </div>
