--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,6 @@
             </div>
         </div>
     </main>
-    <script type="module" src="../src/app.js" />
+    <script type="module" src="../src/app.js"></script>
 </body>
 </html>
