--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                     <label for="insert-input">Inserir item na lista:</label>
                     <input type="text" id="insert-input" placeholder="Insira um produto">
                 </div>
-                <button type="button">Inserir</button>
+                <button type="button" id="insert-button">Inserir</button>
             </div>
             <div class="row-align">
                 <div id="list-container" class="scroll-y">
@@ -35,5 +35,6 @@
             </div>
         </div>
     </main>
+    <script type="module" src="../src/app.js"></script>
 </body>
 </html>
