style for inputs and buttons

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
     </header>
     <main>
         <div class="column-align">
-            <div class="row-align">
-                <div class="column-align">
-                    <label for="insert-input">Inserir item na lista:</label>
+            <div class="column-align flex-start">
+                <label for="insert-input">Inserir item na lista:</label>
+                <div class="row-align">
                     <input type="text" id="insert-input" placeholder="Insira um produto">
+                    <button id="insert-button" type="button">Inserir</button>
                 </div>
-                <button id="insert-button" type="button">Inserir</button>
             </div>
             <div class="row-align">
                 <div id="list-container" class="scroll-y">
