css overflow treatment on list-content container

--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,12 @@
                 </div>
             </div>
             <div class="row-align">
-                <div id="list-container" class="scroll-y">
+                <div id="list-container">
                     <h1>Lista de compras</h1>
                 </div>
                 <div>
                     <p>Total das compras:</p>
-                    <h1 id="purchase-total">R$ 0,00</h1>
+                    <h1 id="purchase-total">R$ 0.00</h1>
                 </div>
             </div>
         </div>
