--- a/public/index.html
+++ b/public/index.html
@@ -20,17 +20,20 @@
     </header>
     <main>
         <div class="column-align">
-            <div class="column-align flex-start">
+            <section id="insert-product-section" class="column-align flex-start">
                 <label for="insert-input">Inserir item na lista:</label>
                 <div class="row-align">
                     <input type="text" id="insert-input" placeholder="Insira um produto">
                     <button id="insert-button" type="button">Inserir</button>
                 </div>
-            </div>
+            </section>
             <div class="row-align">
-                <div id="list-container">
+                <section id="list-container">
                     <h1>Lista de compras</h1>
-                </div>
+                    <ul id="products-list">
+                        <!-- Here products are print -->
+                    </ul>
+                </section>
                 <div>
                     <p>Total das compras:</p>
                     <h1 id="purchase-total">R$ 0.00</h1>
